# -*- Autoconf -*- 
# Process this file with autoconf to produce a configure script. 
 
AC_PREREQ(2.59) 
AC_INIT(TestCXXProject, 1.0.0) 
AM_INIT_AUTOMAKE 
AC_CONFIG_SRCDIR([main.cc]) 
AC_CONFIG_HEADER([config.h]) 
AC_CONFIG_FILES([Makefile]) 
 
# Checks for programs. 
AC_PROG_CXX 
AC_PROG_LIBTOOL 
 
# Checks for libraries. 
ACX_PTHREAD 
 
# Checks for header files. 
 
# Checks for typedefs, structures, and compiler characteristics. 
 
# Checks for library functions. 
AC_OUTPUT 
