# -*- Autoconf -*- 
# Process this file with autoconf to produce a configure script. 
dnl Process this file with autoconf to produce a configure script
AC_INIT([Test Autotools],[1],[nobody@nothing.com],[cxxtest])
AC_PREREQ(2.60a)
AC_CONFIG_AUX_DIR(ext)
AM_INIT_AUTOMAKE
AC_COPYRIGHT(All portions of this software are copylefted (c))

# AC_LANG([C++])
AC_PROG_CXX
AC_PROG_RANLIB
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
 
AC_CONFIG_SRCDIR([main.cc]) 
AC_CONFIG_HEADER([config.h]) 
AC_CONFIG_FILES([Makefile]) 
 
ACX_PTHREAD 
 
AC_OUTPUT 
